2009-07-18  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 0.95.
	* NEWS: Update.

	* src/client.py (ClientsConnection.send_inner)
	(ClientsConnection.read_payload)
	(ClientsConnection.write_payload_to_file)
	(ClientsConnection.__read_header)
	* src/server.py (ServersConnection.read_request)
	(ServersConnection.__send_payload)
	(ServersConnection.send_reply_header): Use M2Crypto.EVP.HMAC instead of
	Python's hmac, which uses incorrect block size in RHEL5.
	* src/utils.py (M2CryptoSHA512DigestMod): Remove.

	* src/utils.py (nss_init._password_callback): Be compatible with both
	python-nss 0.1 and 0.4.

2009-07-17  Miloslav Trmač  <mitr@redhat.com>

	* config/server.conf (database-path): Fix the comments.

2009-07-01  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 0.94.
	* NEWS: Update.

	* README: Note that unmodified python-nss >= 0.4 is required.
	* src/utils.py (nss_init._password_callback): Update for python-nss-0.4.

2009-04-10  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Version 0.93.

	* doc/sigul.1.in: Document import-key.
	* README: Document import-key.

	* doc/protocol-design.txt (import-key): New operation.
	* src/client.py (cmd_import_key): New function.
	(command_handlers): Add cmd_import_key.
	* src/errors.py (INVALID_IMPORT, IMPORT_PASSPHRASE_ERROR): New
	definitions.
	(_messages): Update.
	* src/bridge.py (request_types): Add import-key.
	* src/server_common.py (GPGError): New exception class.
	(_restore_gnupg_home, gpg_import_key): New functions.
	(_ChangePasswordResponder): New class.
	(gpg_change_password): New function.
	* src/server.py (random_passphrase): Split from cmd_new_key.
	(cmd_import_key): New function.

	* src/bridge.py: Update to run with newer python-fedora.

	* src/client.py (cmd_grant_key_access): Use read_key_passphrase().

	* src/server.py (cmd_new_key): Remove a redundant check.

2009-01-28  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Version 0.92.
	* NEWS: Update.
