@@ -1,3 +1,9 @@
+2009-07-22  Miloslav Trmač  <mitr@redhat.com>
+
+	* src/bridge.py (bridge_one_request, main)
+	* src/server.py (request_handling_child): Log more useful information
+	about NSPRError on RHEL5.
+
 2009-07-18  Miloslav Trmač  <mitr@redhat.com>
 
 	* configure.ac: Release 0.95.
